Pegged rust-crypto to a version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Jamie Patel <jamie@notespublication.com>"]
 
 [dependencies]
 hyper="0.5.0"
-rust-crypto = "*"
+rust-crypto = "0.2.31"
 rustc-serialize = "0.3"
 time = "0.1"
 
