--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,13 +3,15 @@ name = "pusher"
 version = "0.1.0"
 authors = ["Jamie Patel <jamie@notespublication.com>"]
 
+[lib]
+name = "pusher"
+path = "src/lib.rs"
+
 [dependencies]
 hyper="0.5.0"
 rust-crypto = "0.2.31"
 rustc-serialize = "0.3"
 time = "0.1"
-rustful="0.1"
-plugin="*"
 regex = "0.1.8"
 
 [dependencies.nickel]
