--- a/.travis.yml
+++ b/.travis.yml
@@ -3,3 +3,17 @@ rust:
   - nightly
   - 1.0.0
 script: cargo test
+after_success: |
+    sudo apt-get install libcurl4-openssl-dev libelf-dev libdw-dev &&
+    wget https://github.com/SimonKagstrom/kcov/archive/master.tar.gz &&
+    tar xzf master.tar.gz && mkdir kcov-master/build && cd kcov-master/build && cmake .. && make &&
+    sudo make install && cd ../.. &&
+    kcov --coveralls-id=$TRAVIS_JOB_ID --exclude-pattern=/.cargo target/kcov target/debug/pusher-*
+    [ $TRAVIS_BRANCH = master ] &&
+    [ $TRAVIS_PULL_REQUEST = false ] &&
+    [ $TRAVIS_RUST_VERSION = stable ] &&
+    cargo doc  &&
+    echo '<meta http-equiv=refresh content=0;url=pusher/index.html>' > target/doc/index.html &&
+    pip install --user ghp-import &&
+    /home/travis/.local/bin/ghp-import -n target/doc &&
+    git push -fq https://${TOKEN}@github.com/${TRAVIS_REPO_SLUG}.git gh-pages
