Link to README in Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.3.0"
 authors = ["Jamie Patel <jamie@pusher.com>"]
 description = "The Rust library for interacting with the Pusher HTTP API."
 repository = "http://github.com/pusher/pusher-http-rust"
+readme = "README.md"
 license = "MIT"
 keywords = ["realtime", "websockets", "pusher"]
 
