--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ readme = "README.md"
 license = "MIT"
 keywords = ["realtime", "websockets", "pusher"]
 categories = ["web-programming", "web-programming::http-client"]
+edition = "2018"
 
 [badges]
 travis-ci = { repository = "pusher-community/pusher-http-rust", branch = "master" }
@@ -17,13 +18,17 @@ name = "pusher"
 path = "src/lib.rs"
 
 [dependencies]
-hyper = "0.10"
-regex = "0.2"
+bytes = "0.5"
+hex = "0.4"
+hyper = "0.13"
+regex = "1.3"
 rust-crypto = "0.2"
-rustc-serialize = "0.3"
-time = "0.1"
-url = "1"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
+url = "2.1"
 
 [dev-dependencies]
-yup-hyper-mock = "2.0"
-log = "0.3"  # log macros are used within yup-hyper-mock
+log = "0.4" # log macros are used within yup-hyper-mock
+tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
+yup-hyper-mock = { git = "https://github.com/vivint-smarthome/yup-hyper-mock", branch = "async-await" }
+
