--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,5 +34,4 @@ url = "2.1"
 [dev-dependencies]
 log = "0.4" # log macros are used within yup-hyper-mock
 tokio = { version = "0.2", features = ["macros", "rt-threaded"] }
-yup-hyper-mock = { git = "https://github.com/vivint-smarthome/yup-hyper-mock", branch = "async-await" }
-
+yup-hyper-mock = "4.0.0"
