--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,11 +24,13 @@ path = "examples/auth_server.rs"
 [dependencies]
 bytes = "1.0"
 hex = "0.4"
+hmac = "0.12"
 hyper = { version = "0.14", features = ["server"] }
+md-5 = "0.10"
 regex = "1.5"
-rust-crypto = "0.2"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+sha2 = "0.10"
 url = "2.2"
 
 [dev-dependencies]
